--- a/Bootstrap/AppleFooter.html
+++ b/Bootstrap/AppleFooter.html
@@ -19,84 +19,84 @@
                     <li class="list-group-item"><a href="CosmosHome.html">Shop and Learn</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Mac</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">iPad</a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p>iPhone</p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p>Apple Watch</p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p>TV</p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p>Music</p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p>iTunes</p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p>Home Pod</p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p>iPod Touch</p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p>Apple Card</p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p>Accessories</p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p>Gift Card</p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">iPhone</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Apple Watch</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">TV</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Music</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">iTunes</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Home Pod</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">iPod Touch</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Apple Card</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Accessories</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Gift Card</a></li>
                 </ul>
             </div>
             <div class="col-2">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
                 </ul>
             </div>
             <div class="col-2">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
                 </ul>
             </div>
             <div class="col-2">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
                 </ul>
             </div>
             <div class="col-2">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"><p></p></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
                 </ul>
             </div>    
         </div>
