--- a/Bootstrap/AppleFooter.html
+++ b/Bootstrap/AppleFooter.html
@@ -33,19 +33,18 @@
             </div>
             <div class="col-2">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Apple Store</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Find A Store</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Shop Online</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Genius Bar</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Today at Apple</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Youth Program</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Apple Store App</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Refurbished And Clearance</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Financing</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Apple Trade In</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Order Status</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Shopping Help</a></li>
                 </ul>
             </div>
             <div class="col-2">
@@ -67,20 +66,18 @@
             </div>
             <div class="col-2">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                </ul>
+                    <li class="list-group-item"><a href="CosmosHome.html">For Education</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Apple And Education</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Shop For College</a></li>
+                    <p></p>
+                    <li class="list-group-item"><a href="CosmosHome.html">For Business</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Apple And Business</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Shop For Business</a></li>
+                    <p></p>
+                    <li class="list-group-item"><a href="CosmosHome.html">Government</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Shop For Gonernment</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Shop For  Vetrans & Millitary</a></li>
+                     </ul>
             </div>
             <div class="col-2">
                 <ul class="list-group list-group-flush">
