--- a/Bootstrap/AppleFooter.html
+++ b/Bootstrap/AppleFooter.html
@@ -81,19 +81,18 @@
             </div>
             <div class="col-2">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">For Health Care</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Apple and HealthCare</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Health on Apple Watch</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Health Records on iPhone</a></li>
+                    <p></p>
+                    <li class="list-group-item"><a href="CosmosHome.html">Apple Values</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Accessibility</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Education</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Environment</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Inclusion and Diversity</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Privacy</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Supplier Responsibility</a></li>
                 </ul>
             </div>    
         </div>
