--- a/Bootstrap/AppleFooter.html
+++ b/Bootstrap/AppleFooter.html
@@ -48,21 +48,7 @@
                 </ul>
             </div>
             <div class="col-2">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                    <li class="list-group-item"><a href="CosmosHome.html"></a></li>
-                </ul>
+                
             </div>
             <div class="col-2">
                 <ul class="list-group list-group-flush">
@@ -78,6 +64,20 @@
                     <li class="list-group-item"><a href="CosmosHome.html">Shop For Gonernment</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Shop For  Vetrans & Millitary</a></li>
                      </ul>
+                     <ul class="list-group list-group-flush">
+                        <li class="list-group-item"><a href="CosmosHome.html">Account</a></li>
+                        <li class="list-group-item"><a href="CosmosHome.html">Manage Your Apple ID</a></li>
+                        <li class="list-group-item"><a href="CosmosHome.html">Apple Store Account</a></li>
+                        <li class="list-group-item"><a href="CosmosHome.html">iCloud.com</a></li>
+                        <p></p>
+                        <li class="list-group-item"><a href="CosmosHome.html">About Apple</a></li>
+                        <li class="list-group-item"><a href="CosmosHome.html">Newsroom</a></li>
+                        <li class="list-group-item"><a href="CosmosHome.html">Apple Leadership</a></li>
+                        <li class="list-group-item"><a href="CosmosHome.html">Job Opportunities</a></li>
+                        <li class="list-group-item"><a href="CosmosHome.html">Inversions</a></li>
+                        <li class="list-group-item"><a href="CosmosHome.html">Events</a></li>
+                        <li class="list-group-item"><a href="CosmosHome.html">Contact Apple</a></li>
+                    </ul>
             </div>
             <div class="col-2">
                 <ul class="list-group list-group-flush">
