--- a/Bootstrap/AppleFooter.html
+++ b/Bootstrap/AppleFooter.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-2">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="CosmosHome.html">Shop and Learn</a></li>
+                    <li class="list-group-item bol"><a href="CosmosHome.html">Shop and Learn</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Mac</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">iPad</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">iPhone</a></li>
@@ -33,7 +33,7 @@
             </div>
             <div class="col-2">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="CosmosHome.html">Apple Store</a></li>
+                    <li class="list-group-item bol"><a href="CosmosHome.html">Apple Store</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Find A Store</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Shop Online</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Genius Bar</a></li>
@@ -49,50 +49,50 @@
             </div>
             <div class="col-2">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="CosmosHome.html">For Education</a></li>
+                    <li class="list-group-item bol"><a href="CosmosHome.html">For Education</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Apple And Education</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Shop For College</a></li>
                     <p></p>
-                    <li class="list-group-item"><a href="CosmosHome.html">For Business</a></li>
+                    <li class="list-group-item bol"><a href="CosmosHome.html">For Business</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Apple And Business</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Shop For Business</a></li>
                     <p></p>
-                    <li class="list-group-item"><a href="CosmosHome.html">Government</a></li>
+                    <li class="list-group-item bol"><a href="CosmosHome.html">Government</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Shop For Gonernment</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Shop For  Vetrans & Millitary</a></li>
                      </ul>
             </div>
             <div class="col-2">
                 
-                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item"><a href="CosmosHome.html">Account</a></li>
-                        <li class="list-group-item"><a href="CosmosHome.html">Manage Your Apple ID</a></li>
-                        <li class="list-group-item"><a href="CosmosHome.html">Apple Store Account</a></li>
-                        <li class="list-group-item"><a href="CosmosHome.html">iCloud.com</a></li>
-                        <p></p>
-                        <li class="list-group-item"><a href="CosmosHome.html">About Apple</a></li>
-                        <li class="list-group-item"><a href="CosmosHome.html">Newsroom</a></li>
-                        <li class="list-group-item"><a href="CosmosHome.html">Apple Leadership</a></li>
-                        <li class="list-group-item"><a href="CosmosHome.html">Job Opportunities</a></li>
-                        <li class="list-group-item"><a href="CosmosHome.html">Inversions</a></li>
-                        <li class="list-group-item"><a href="CosmosHome.html">Events</a></li>
-                        <li class="list-group-item"><a href="CosmosHome.html">Contact Apple</a></li>
-                    </ul>
-            </div>
-            <div class="col-2">
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><a href="CosmosHome.html">For Health Care</a></li>
+                    <li class="list-group-item bol"><a href="CosmosHome.html">For Health Care</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Apple and HealthCare</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Health on Apple Watch</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Health Records on iPhone</a></li>
                     <p></p>
-                    <li class="list-group-item"><a href="CosmosHome.html">Apple Values</a></li>
+                    <li class="list-group-item bol"><a href="CosmosHome.html">Apple Values</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Accessibility</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Education</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Environment</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Inclusion and Diversity</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Privacy</a></li>
                     <li class="list-group-item"><a href="CosmosHome.html">Supplier Responsibility</a></li>
+                </ul>
+            </div>
+            <div class="col-2">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item bol"><a href="CosmosHome.html">Account</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Manage Your Apple ID</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Apple Store Account</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">iCloud.com</a></li>
+                    <p></p>
+                    <li class="list-group-item bol"><a href="CosmosHome.html">About Apple</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Newsroom</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Apple Leadership</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Job Opportunities</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Inversions</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Events</a></li>
+                    <li class="list-group-item"><a href="CosmosHome.html">Contact Apple</a></li>
                 </ul>
             </div>    
         </div>
