--- a/Bootstrap/AppleFooter.html
+++ b/Bootstrap/AppleFooter.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="AppleFooter.css">
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid main">
         <div class="row">
             <div class="col-2">
                 <ul class="list-group list-group-flush">
