--- a/Bootstrap/AppleFooter.html
+++ b/Bootstrap/AppleFooter.html
@@ -18,9 +18,9 @@
                 <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
                     <ol class="breadcrumb">
                       <li class="breadcrumb-item"><a href="#">Apple</a></li>
-                      <li class="breadcrumb-item active" aria-current="page">Mac</li>
-                      <li class="breadcrumb-item active" aria-current="page">MacBook Pro</li>
-                      <li class="breadcrumb-item active" aria-current="page">Buy MackBook Pro</li>
+                      <li class="breadcrumb-item active" aria-current="page"><a href="#">Mac</a></li>
+                      <li class="breadcrumb-item active" aria-current="page"><a href="#">MacBook Pro</a></li>
+                      <li class="breadcrumb-item active" aria-current="page"><a href="#">Buy MackBook Pro</a></li>
                     </ol>
                   </nav>
             </div>
