--- a/Bootstrap/Zylo.html
+++ b/Bootstrap/Zylo.html
@@ -8,7 +8,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <title>Practice</title>
+    <title>Zylo Home</title>
+    <link rel="stylesheet" href="Zylo.css">
   </head>
   <body>
 
