--- a/Bootstrap/Zylo.html
+++ b/Bootstrap/Zylo.html
@@ -39,7 +39,7 @@
       </nav>
       <div class="container-flex">
           <div class="row">
-            <div class="col-3">
+            <div class="col-3 sidebar">
                 <div class="row">
                     <div class="list-group">
                         <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
@@ -58,18 +58,10 @@
                           <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
                           <small class="text-muted">Donec id elit non mi porta.</small>
                         </a>
-                        <a href="#" class="list-group-item list-group-item-action">
-                          <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">List group item heading</h5>
-                            <small class="text-muted">3 days ago</small>
-                          </div>
-                          <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                          <small class="text-muted">Donec id elit non mi porta.</small>
-                        </a>
                       </div>
                 </div>
                 <div class="row">
-                    
+
                 </div>
             </div>
             <div class="col-9">
