--- a/Bootstrap/Zylo.html
+++ b/Bootstrap/Zylo.html
@@ -73,7 +73,7 @@
             <div class="col-9">
                 <div class="row">
                     <div class="col-3">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card">
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Card title</h5>
@@ -83,7 +83,7 @@
                           </div>
                     </div>
                     <div class="col-3">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card">
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Card title</h5>
@@ -93,7 +93,7 @@
                           </div>
                     </div>
                     <div class="col-3">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card">
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Card title</h5>
