--- a/Bootstrap/Zylo.html
+++ b/Bootstrap/Zylo.html
@@ -85,7 +85,7 @@
                 <div class="row">
                     <div class="col-3">
                         <div class="card">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="images/F1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Card title</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="col-3">
                         <div class="card">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="images/F2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Card title</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -105,7 +105,7 @@
                     </div>
                     <div class="col-3">
                         <div class="card">
-                            <img src="..." class="card-img-top" alt="...">
+                            <img src="Images/F3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Card title</h5>
                               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
