--- a/Bootstrap/Zylo.html
+++ b/Bootstrap/Zylo.html
@@ -87,9 +87,9 @@
                         <div class="card">
                             <img src="images/F1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <h5 class="card-title">My Crazy [Lover]</h5>
+                              <p class="card-text">I love that fact that I can always see your crazy and funny side.</p>
+                              <a href="#" class="btn btn-primary">I Love You</a>
                             </div>
                           </div>
                     </div>
@@ -97,9 +97,9 @@
                         <div class="card">
                             <img src="images/F2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <h5 class="card-title">My Cutie Pie</h5>
+                              <p class="card-text">You are the prettiest creature since your childhood till eternity.</p>
+                              <a href="#" class="btn btn-primary">I Love You</a>
                             </div>
                           </div>
                     </div>
@@ -107,9 +107,9 @@
                         <div class="card">
                             <img src="Images/F3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title">Card title</h5>
-                              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <h5 class="card-title">My Angry [Lover]</h5>
+                              <p class="card-text">I know you get angry very often but I can see the love through your anger.</p>
+                              <a href="#" class="btn btn-primary">I love You</a>
                             </div>
                           </div>
                     </div>
