--- a/Bootstrap/Zylo.html
+++ b/Bootstrap/Zylo.html
@@ -55,29 +55,37 @@
                     <div class="list-group">
                         <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
                           <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">List group item heading</h5>
-                            <small>3 days ago</small>
+                            <h5 class="mb-1">My Baby Boo</h5>
+                            <small>[Lover]</small>
                           </div>
-                          <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                          <small>Donec id elit non mi porta.</small>
+                          <p class="mb-1">I love your cute actions and your expressions. I love when you tell your stories and we make fun of each others.</p>
+                          <small>You are amazing.</small>
                         </a>
                         <a href="#" class="list-group-item list-group-item-action">
                           <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">List group item heading</h5>
-                            <small class="text-muted">3 days ago</small>
+                            <h5 class="mb-1">My Dive</h5>
+                            <small class="text-muted">[Lover]</small>
                           </div>
-                          <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                          <small class="text-muted">Donec id elit non mi porta.</small>
+                          <p class="mb-1">Your style, your feel your smile your EveryThing is so good, you are no less then a dive.</p>
+                          <small class="text-muted">You are spectacular.</small>
                         </a>
                       </div>
                 </div>
                 <div class="row">
                     <ul class="list-group">
-                        <li class="list-group-item">Cras justo odio</li>
-                        <li class="list-group-item">Dapibus ac facilisis in</li>
-                        <li class="list-group-item">Morbi leo risus</li>
-                        <li class="list-group-item">Porta ac consectetur ac</li>
-                        <li class="list-group-item">Vestibulum at eros</li>
+                        <li class="list-group-item">[Lover] is Pretty</li>
+                        <li class="list-group-item">[Lover] is Humerous</li>
+                        <li class="list-group-item">[Lover] is Smart</li>
+                        <li class="list-group-item">[Lover] is Sexy</li>
+                        <li class="list-group-item">[Lover] is Sensitive</li>
+                        <li class="list-group-item">[Lover] is Cute</li>
+                        <li class="list-group-item">[Lover] is Sensible</li>
+                        <li class="list-group-item">[Lover] is Loving</li>
+                        <li class="list-group-item">[Lover] is Caring</li>
+                        <li class="list-group-item">[Lover] is Intelligent</li>
+                        <li class="list-group-item">[Lover] is Beautiful</li>
+                        <li class="list-group-item">[Lover] is Mine</li>
+
                       </ul>
                 </div>
             </div>
